<resources>
    <string name="app_name">PKI</string>
    <string name="login_title">Uloguj se</string>
    <string name="username">Korisničko ime</string>
    <string name="password">Lozinka</string>
    <string name="login_button">Uloguj se</string>
    <string name="login_error">Neispravno korisničko ime ili lozinka.</string>
    <string name="login_success">Uspešno ste se ulogovali.</string>
    <string name="network_error_generic">Greška pri povezivanju. Pokušajte ponovo.</string>
    <string name="error_required">Obavezno polje</string>
    <string name="register_link">Registruj se</string>
    <string name="change_password_link">Promeni lozinku</string>
    <string name="change_password_title">Promeni lozinku</string>
    <string name="old_password">Stara lozinka</string>
    <string name="new_password">Nova lozinka</string>
    <string name="confirm_password">Potvrdi novu lozinku</string>
    <string name="change_password_button">Promeni lozinku</string>
    <string name="passwords_mismatch">Lozinke se ne poklapaju.</string>
    <string name="password_same_as_old">Nova lozinka ne može biti ista kao stara.</string>
    <string name="password_changed_success">Lozinka uspešno promenjena.</string>
    <string name="password_change_failed">Promena lozinke nije uspela.</string>
    <string name="login_link">Prijavi se</string>
    <string name="register_title">Registracija</string>
    <string name="register_button">Registruj se</string>
    <string name="register_success">Registracija uspešna. Prijavite se.</string>
    <string name="register_failed">Registracija nije uspela.</string>
    <string name="first_name">Ime</string>
    <string name="last_name">Prezime</string>
    <string name="phone">Telefon</string>
    <string name="address">Adresa</string>
    <string name="profile_title">Lični podaci</string>
    <string name="profile_save_button">Sačuvaj izmene</string>
    <string name="profile_updated">Podaci su uspešno izmenjeni.</string>
    <string name="profile_update_failed">Greška pri izmeni podataka.</string>
    <string name="login_required">Morate biti prijavljeni.</string>
    <string name="user_type">Tip korisnika</string>
    <string name="user_type_organizer">Organizator</string>
    <string name="user_type_customer">Korisnik</string>
    <string name="user_type_unknown">Tip %1$d</string>
    <string name="promotions_title">Promocije</string>
    <string name="promotions_load_error">Došlo je do greške pri učitavanju promocija.</string>
    <string name="promotion_image_desc">Slika promocije</string>
    <string name="events_title">Organizovani događaji</string>
    <string name="events_load_error">Došlo je do greške pri učitavanju događaja.</string>
    <string name="event_image_desc">Slika događaja</string>
    <string name="event_offers_title">Ponuda događaja</string>
    <string name="event_offers_load_error">Došlo je do greške pri učitavanju ponuda.</string>
    <string name="event_offer_image_desc">Slika ponude</string>
    <string name="view_more">Pogledaj više</string>
    <string name="invalid_offer_id">Nevažeći ID ponude.</string>
    <string name="offer_load_error">Neuspešno učitavanje ponude.</string>
    <string name="unknown">Nepoznato</string>
    <string name="comments_and_ratings">Komentari i ocene</string>
    <string name="events_you_can_rate">Događaji koje možete oceniti</string>
    <string name="schedule_event">Zakaži događaj</string>
    <string name="date">Datum</string>
    <string name="number_of_people">Broj gostiju</string>
    <string name="add_to_cart">Dodaj u korpu</string>
    <string name="comment">Komentar</string>
    <string name="add_comment">Dodaj komentar</string>
    <string name="comment_added">Komentar dodat.</string>
    <string name="comment_failed">Greška pri dodavanju komentara.</string>
    <string name="added_to_cart">Događaj dodat u korpu!</string>
    <string name="add_to_cart_failed">Neuspešno dodavanje u korpu.</string>
    <string name="rate_validation">Odaberite ocenu od 1 do 5.</string>
    <string name="unknown_user">Nepoznat korisnik</string>
    <string name="no_comment">Nema komentara</string>
    <string name="price_eur_format">Cena: %1$.2f €</string>
    <string name="guests_date_format">%1$d gostiju, %2$s</string>
    <string name="error_positive_number">Unesite broj veći od 0.</string>
    <string name="cart_title">Moja korpa</string>
    <string name="cart_load_error">Greška prilikom učitavanja korpe.</string>
    <string name="cart_empty">Korpa je prazna.</string>
    <string name="cart_confirm_button">Zakaži</string>
    <string name="cart_confirm_success">Korpa uspešno potvrđena!</string>
    <string name="cart_confirm_error">Greška prilikom potvrđivanja korpe.</string>
    <string name="cart_remove_error">Greška prilikom brisanja iz korpe.</string>
    <string name="cart_action_delete">Ukloni iz korpe</string>
    <string name="cart_login_required">Molimo prijavite se (ili nemate dozvolu za pristup korpi).</string>
    <string name="notifications_title">Obaveštenja</string>
    <string name="notifications_load_error">Greška prilikom učitavanja obaveštenja.</string>
    <string name="notifications_empty">Nemate obaveštenja.</string>
    <string name="notifications_mark_failed">Greška pri označavanju kao pročitanog.</string>
    <string name="notifications_login_required">Prijavite se (i uverite se da imate dozvolu) da vidite obaveštenja.</string>
    <string name="menu_notifications_label">Obaveštenja</string>
    <string name="scheduling_title">Upravljanje zakazivanjima</string>
    <string name="scheduling_load_error">Greška pri učitavanju događaja.</string>
    <string name="scheduling_empty">Trenutno nema događaja za upravljanje.</string>
    <string name="scheduling_not_allowed">Nemate dozvolu za pristup ovoj stranici.</string>
    <string name="scheduling_action_approve">Prihvati događaj</string>
    <string name="scheduling_action_decline">Odbij događaj</string>
    <string name="scheduling_approve_error">Greška pri prihvatanju događaja.</string>
    <string name="scheduling_decline_error">Greška pri odbijanju događaja.</string>
    <string name="new_offer_title">Dodaj novi događaj</string>
    <string name="new_offer_name">Naziv događaja</string>
    <string name="new_offer_short_desc">Kratak opis</string>
    <string name="new_offer_description">Detaljan opis</string>
    <string name="new_offer_price">Cena (€)</string>
    <string name="new_offer_pick_image">Odaberi sliku</string>
    <string name="new_offer_submit">Dodaj događaj</string>
    <string name="new_offer_success">Ponuda je uspešno dodata.</string>
    <string name="new_offer_failed">Greška pri dodavanju ponude.</string>
    <string name="new_offer_not_allowed">Nemate dozvolu za pristup ovoj stranici.</string>
    <string name="photo_upload_failed">Greška pri otpremanju slike.</string>
    <string name="photo_pick_error">Greška pri odabiru slike.</string>
    <string name="error_price_non_negative">Unesite cenu koja nije negativna.</string>
    <string name="new_offer_preview_desc">Pregled slike događaja</string>

</resources>
